--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="hero-content">
                 <h1>Welcome to Ideal Motives</h1>
                 <p>We are a team who help people lead a happier life</p>
-                <p>We are presently building this website. Until then, you may contact us <a href=mailto:info@ideal-motives.com?subject=Inquiry%20from%20website>here</a>.</p>
+                <p>We are presently building this website. Until then, you may contact us <a href=mailto:info@idealmotives.in?subject=Inquiry%20from%20website>here</a>.</p>
                 <a href="#" class="hero-cta">Get Started</a>
             </div>
         </section>
@@ -274,7 +274,7 @@
                             <span class="c-icon"><i class="fa fa-phone" aria-hidden="true"></i></span> <span class="c-info">+91 99860 60801</span>
                         </div>
                         <div class="c-detail">
-                            <span class="c-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span> <span class="c-info"><a href=mailto:info@ideal-motives.com?subject=Inquiry%20from%20website>info@ideal-motives.com</a></span>
+                            <span class="c-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span> <span class="c-info"><a href=mailto:info@idealmotives.in?subject=Inquiry%20from%20website>info@idealmotives.in</a></span>
                         </div>
                     </div>
                     <div class="form-wrap">
